--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="about.html">¿Cómo somos los Puertorriqueños?</a>
+                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                     </li>
                     <li>
                         <a href="services.html">Ambiente</a>
@@ -84,7 +84,9 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('/img/carr-2.jpg');"></div>
+                <a href="como-somos.html">
+                    <div class="fill" style="background-image:url('/img/carr-2.jpg');"></div>
+                </a>
                 <div class="carousel-caption">
                     <h2>¿Cómo somos los puertorriqueños?</h2>
                 </div>
@@ -150,7 +152,7 @@
         <!-- /.row -->
 
         <!-- Portfolio Section -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Portfolio Heading</h2>
             </div>
@@ -184,11 +186,11 @@
                     <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
                 </a>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <!-- Features Section -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Modern Business Features</h2>
             </div>
@@ -208,13 +210,13 @@
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
 
         <!-- Call to Action Section -->
-        <div class="well">
+       <!--  <div class="well">
             <div class="row">
                 <div class="col-md-8">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
@@ -223,7 +225,7 @@
                     <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <hr>
 
@@ -231,7 +233,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; Bryan Cruz 2015</p>
                 </div>
             </div>
         </footer>
