--- a/index.html
+++ b/index.html
@@ -32,36 +32,11 @@
 <body>
 
     <!-- Navigation -->
-<!--     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container"> -->
-            <!-- Brand and toggle get grouped for better mobile display -->
-           <!--  <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Versatilidad Puertorriqueña</a>
-            </div> -->
-            <!-- Collect the nav links, forms, and other content for toggling -->
-           <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
-                    </li>
-                    <li>
-                        <a href="services.html">Ambiente</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Promocion Turística</a>
-                    </li>
-                </ul>
-            </div> -->
-            <!-- /.navbar-collapse -->
-        <!-- </div> -->
-        <!-- /.container -->
-    <!-- </nav> -->
+<style type="text/css">
+    body{
+        padding-top: 0px;
+    }
+</style>
 
     <!-- Header Carousel -->
     <header id="myCarousel" class="carousel slide">
@@ -70,33 +45,43 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
                 <a href="index.html">
-                    <div class="fill" style="background-image:url('/img/carr-1.jpeg');">
-                    </div>
+                    <div class="fill" style="background-image:url('/img/bienvenido.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h2>Inicio</h2>
+                    <h1>Bienvenidos a Versatilidad Puertorriqueña</h1>
                 </div>
             </div>
             <div class="item">
                 <a href="como-somos.html">
-                    <div class="fill" style="background-image:url('/img/carr-2.jpg');"></div>
+                    <div class="fill" style="background-image:url('/img/como-somos.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h2>¿Cómo somos los puertorriqueños?</h2>
+                    <h1>¿Cómo somos los puertorriqueños?</h1>
+                </div>
+            </div>
+            <div class="item">
+                <a href="ambiente.html">
+                    <div class="fill" style="background-image:url('img/ambiente.jpg');"></div>
+                </a>
+                <div class="carousel-caption">
+                    <h1>
+                        <i class="fa fa-sun-o fa-spin"></i>
+                        Ambiente</h1>
                 </div>
             </div>
             <div class="item">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 <div class="carousel-caption">
-                    <h2>Caption 3</h2>
+                    <h1>Caption 3</h1>
                 </div>
-            </div>
+            </div>            
         </div>
 
         <!-- Controls -->
@@ -109,10 +94,10 @@
     </header>
 
     <!-- Page Content -->
-    <div class="container">
+<!--     <div class="container"> -->
 
         <!-- Marketing Icons Section -->
-        <div class="row">
+<!--         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
                     Bienvenidos a Versatilidad Puertorriqueña
@@ -148,7 +133,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <!-- Portfolio Section -->
@@ -213,7 +198,7 @@
         </div> -->
         <!-- /.row -->
 
-        <hr>
+<!--         <hr> -->
 
         <!-- Call to Action Section -->
        <!--  <div class="well">
@@ -227,16 +212,16 @@
             </div>
         </div> -->
 
-        <hr>
+<!--         <hr> -->
 
         <!-- Footer -->
-        <footer>
+<!--         <footer>
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Bryan Cruz 2015</p>
                 </div>
             </div>
-        </footer>
+        </footer> -->
 
     </div>
     <!-- /.container -->
