created quienes somos page, added photos to project, edited nav bar on quienes somos

--- a/ambiente.html
+++ b/ambiente.html
@@ -54,7 +54,7 @@
                         <a href="ambiente.html">Ambiente</a>
                     </li>
                     <li>
-                        <a href="contact.html">Promocion Turística</a>
+                        <a href="promocion.html">Promoción Turística</a>
                     </li>
                 </ul>
             </div>
