--- a/como-somos.html
+++ b/como-somos.html
@@ -51,10 +51,10 @@
                         <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                     </li>
                     <li>
-                        <a href="services.html">Ambiente</a>
+                        <a href="ambiente.html">Ambiente</a>
                     </li>
                     <li>
-                        <a href="contact.html">Promocion Turística</a>
+                        <a href="promocion.html">Promoción Turística</a>
                     </li>
                 </ul>
             </div>
