--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
+            <li data-target="#myCarousel" data-slide-to="4"></li>
+
         </ol>
 
         <!-- Wrapper for slides -->
@@ -77,11 +79,21 @@
                 </div>
             </div>
             <div class="item">
-                <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                <a href="quienes-somos.html">
+                    <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                </a>
                 <div class="carousel-caption">
-                    <h1>Caption 3</h1>
+                    <h1>¿Quienes Somos?</h1>
                 </div>
-            </div>            
+            </div>   
+            <div class="item">
+                <a href="promocion.html">
+                    <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                </a>
+                <div class="carousel-caption">
+                    <h1>Promoción Turistica</h1>
+                </div>
+            </div>         
         </div>
 
         <!-- Controls -->
