--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>   
             <div class="item">
                 <a href="promocion.html">
-                    <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                    <div class="fill" style="background-image:url('img/promocion.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
                     <h1>Promoción Turistica</h1>
