--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="carousel-inner">
             <div class="item active">
                 <a href="index.html">
-                    <div class="fill" style="background-image:url('/img/bienvenido.jpg');"></div>
+                    <div class="fill" style="background-image:url('img/bienvenido.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
                     <h1>Bienvenidos a Versatilidad Puertorriqueña</h1>
@@ -62,7 +62,7 @@
             </div>
             <div class="item">
                 <a href="como-somos.html">
-                    <div class="fill" style="background-image:url('/img/como-somos.jpg');"></div>
+                    <div class="fill" style="background-image:url('img/como-somos.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
                     <h1>¿Cómo somos los puertorriqueños?</h1>
