--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>¿Quienes Somos?</h1>
+                    <h1>¿Quiénes somos?</h1>
                 </div>
             </div>   
             <div class="item">
@@ -91,7 +91,7 @@
                     <div class="fill" style="background-image:url('img/promocion.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>Promoción Turistica</h1>
+                    <h1>Promoción turistica</h1>
                 </div>
             </div>         
         </div>
