--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center" style="padding-top: 40px;">
-                    <h2>Integrantes de Versatilidad Puertorriqeña</h2>
+                    <h2>Integrantes de Versatilidad Puertorriqueña</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -102,7 +102,7 @@
                     <a class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                Natalia Camacho
+                                Natalia L. Camacho Albino
                             </div>
                         </div>
                         <img src="img/Natalia.jpg" class="img-responsive" alt="">
@@ -112,7 +112,7 @@
                     <a class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                Jose Santiago
+                                Jose D. Santiago Negrón
                             </div>
                         </div>
                         <img src="img/Jose.jpg" class="img-responsive" alt="">
