--- a/como-somos.html
+++ b/como-somos.html
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="container" style="height:100%">
-                    <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-sm-12" height="500"></iframe>
+                    <iframe src="https://docs.google.com/document/d/1WyEApNTjbYXk3ADoWiczIltejxNo3CfoxMDpuKJ7f6I/pub?embedded=true" class="col-lg-offset-2 col-lg-8 col-xs-12 col-sm-12" height="500"></iframe>
                     <!-- <iframe src="//www.slideshare.net/slideshow/embed_code/45870058" class="col-lg-offset-2 col-lg-8"  height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe> -->
                 </div>
             </div>
