--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+<!--     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container"> -->
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+           <!--  <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
@@ -43,9 +43,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">Versatilidad Puertorriqueña</a>
-            </div>
+            </div> -->
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+           <!--  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
@@ -57,11 +57,11 @@
                         <a href="contact.html">Promocion Turística</a>
                     </li>
                 </ul>
-            </div>
+            </div> -->
             <!-- /.navbar-collapse -->
-        </div>
+        <!-- </div> -->
         <!-- /.container -->
-    </nav>
+    <!-- </nav> -->
 
     <!-- Header Carousel -->
     <header id="myCarousel" class="carousel slide">
@@ -144,7 +144,7 @@
                         <h4><i class="fa fa-fw fa-check"></i>Vision / Misión</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesado en aprender la historia de nuestra bella isla e informarlos de los acontecimientos actuales en los que estamos pasando. Los que entren a la página podrán disfrutar de la versatilidad de lo que es ser puertorriqueño. </p>
                     </div>
                 </div>
             </div>
