--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="fill" style="background-image:url('img/promocion.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>Promoción turistica</h1>
+                    <h1>Promoción turística</h1>
                 </div>
             </div>         
         </div>
