added section to quienes somos page and edited the tittle

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>¿Quiénes somos?</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -81,103 +81,110 @@
             </div>
         </div>
     </header>
-
-    <!-- About Section -->
-    <section class="success" id="about">
+    <!-- Propósito Section -->
+    <section>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
-                    <hr class="star-light">
+                    <h2>Propósito</h2>
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-                </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
-                    </a>
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>Esta página es producto de un proyecto de historia. En la misma se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
+
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="success">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 >Visión</h2>
+                    <hr class="star-light">
+                </div>
+            </div>
+            <div lass="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesado en aprender la historia de nuestra bella isla e informarlos de los acontecimientos actuales en los que estamos pasando. Los que entren a la página podrán disfrutar de la versatilidad de lo que es ser puertorriqueño. </p>
+                </div>
+            </div>
+    </section>
+
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="portfolio" class="success">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center" style="padding-top: 40px;">
                     <h2>Integrantes de Versatilidad Puertorriqueña</h2>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
+                    <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Bryan Cruz Ulloa
                             </div>
                         </div>
-                        <img src="img/Bryan.jpg" class="img-responsive" alt="">
+                        <img src="img/Bryan.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
+                    <a class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 Luz B. Baez Prieto
                             </div>
                         </div>
-                        <img src="img/Luz.jpg" class="img-responsive" alt="">
+                        <img src="img/Luz.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
+                    <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Natalia L. Camacho Albino
                             </div>
                         </div>
-                        <img src="img/Natalia.jpg" class="img-responsive" alt="">
+                        <img src="img/Natalia.jpg" class="img-responsive">
                     </a>
                 </div>                
                 <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
+                    <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Jose D. Santiago Negrón
                             </div>
                         </div>
-                        <img src="img/Jose.jpg" class="img-responsive" alt="">
+                        <img src="img/Jose.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a class="portfolio-link" data-toggle="modal">
+                    <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Ricardo R. Rojas Rivera
                             </div>
                         </div>
-                        <img src="img/Ricardo.jpg" class="img-responsive" alt="">
+                        <img src="img/Ricardo.jpg" class="img-responsive">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+<!--                 <div class="col-sm-4 portfolio-item">
                     <a class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/submarine.png" class="img-responsive">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
