Added mision on quienes-somos page

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -99,6 +99,7 @@
         </div>
     </section>
 
+<!-- Seccion de vision -->
     <section class="success">
         <div class="container">
             <div class="row">
@@ -114,6 +115,23 @@
             </div>
     </section>
 
+<!-- seccion de Mision -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Misión</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra Isla, la que llamamos Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando. ¡Disfruten de la belleza tropical puertorriqueña!</p>
+
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="success">
@@ -172,7 +190,7 @@
                                 Ricardo R. Rojas Rivera
                             </div>
                         </div>
-                        <img src="img/Ricardo.jpg" class="img-responsive">
+                        <img src="img/Ricardo.jpg" class="img-responsive ">
                     </a>
                 </div>
 <!--                 <div class="col-sm-4 portfolio-item">
