styled images, wraped text

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -34,7 +34,7 @@
 <body id="page-top" class="index">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top col-xs-12" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Versatilidad Puertorriqueña</a>
+                <a class="navbar-brand col-xs-6 hidden-xs" href="index.html">Versatilidad Puertorriqueña</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -53,7 +53,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Secciones <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
+                                <a class="hidden-md hidden-sm hidden-md hidden-lg hidden-xl" href="index.html">Inicio</a>
+                            </li>
+                            <li>
+                                <a class="class-xs-12" href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                             </li>
                             <li>
                                 <a href="ambiente.html">Ambiente</a>
@@ -72,8 +75,7 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                <div class="col-lg-12 col-xs-12">
                     <div class="intro-text">
                         <span class="name">¿Quienes somos?</span>
                     </div>
@@ -85,13 +87,13 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 col-xs-12 text-center">
                     <h2>Propósito</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-xs-12 col-lg-offset-2">
                     <p>Esta página es producto de un proyecto de historia. En la misma se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
 
                 </div>
@@ -103,13 +105,13 @@
     <section class="success">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 col-xs-12 text-center">
                     <h2 >Visión</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div lass="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-xs-12 col-lg-offset-2">
                     <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesado en aprender la historia de nuestra bella isla e informarlos de los acontecimientos actuales en los que estamos pasando. Los que entren a la página podrán disfrutar de la versatilidad de lo que es ser puertorriqueño. </p>
                 </div>
             </div>
@@ -119,13 +121,13 @@
     <section>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 col-xs-12 text-center">
                     <h2>Misión</h2>
                     <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 col-xs-12 col-lg-offset-2">
                     <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra Isla, la que llamamos Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando. ¡Disfruten de la belleza tropical puertorriqueña!</p>
 
                 </div>
@@ -137,60 +139,60 @@
     <section id="portfolio" class="success">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center" style="padding-top: 40px;">
-                    <h2>Integrantes de Versatilidad Puertorriqueña</h2>
+                <div class="col-xs-12 text-center" style="padding-top: 40px;">
+                    <h2>Integrantes del Grupo</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Bryan Cruz Ulloa
                             </div>
                         </div>
-                        <img src="img/Bryan.jpg" class="img-responsive">
+                        <img src="img/Bryan.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link" >
                         <div class="caption">
                             <div class="caption-content">
                                 Luz B. Baez Prieto
                             </div>
                         </div>
-                        <img src="img/Luz.jpg" class="img-responsive">
+                        <img src="img/Luz.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Natalia L. Camacho Albino
                             </div>
                         </div>
-                        <img src="img/Natalia.jpg" class="img-responsive">
+                        <img src="img/Natalia.jpg" class="img-responsive img-fix">
                     </a>
                 </div>                
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Jose D. Santiago Negrón
                             </div>
                         </div>
-                        <img src="img/Jose.jpg" class="img-responsive">
+                        <img src="img/Jose.jpg" class="img-responsive img-fix">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 Ricardo R. Rojas Rivera
                             </div>
                         </div>
-                        <img src="img/Ricardo.jpg" class="img-responsive ">
+                        <img src="img/Ricardo.jpg" class="img-responsive ricardo-fix">
                     </a>
                 </div>
 <!--                 <div class="col-sm-4 portfolio-item">
