started promocion page, added brochoure images

--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -202,7 +202,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive">
+                        <img src="" class="img-responsive">
                     </a>
                 </div> -->
             </div>
