--- a/promocion.html
+++ b/promocion.html
@@ -104,6 +104,18 @@
         </div>
     </section> 
 
+    <section class="success">
+	    <div class="container">	
+	    	<div class="row">
+				<div class="col-lg-12 col-xs-12 text-center">
+					<h2>Voki</h2>
+					<hr class="star-light">
+				</div>
+	    	</div>
+    	</div>
+		
+    </section>
+
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visble-sm">
         <a class="btn btn-primary" href="#page-top">
