added quienes smos pic

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
             <div class="item">
                 <a href="quienes-somos.html">
-                    <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide Three');"></div>
+                    <div class="fill" style="background-image:url('img/quienessomos.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
                     <h1>¿Quiénes somos?</h1>
