added buttons on the carrousel :)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
                     <div class="fill" style="background-image:url('img/como-somos.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>¿Cómo somos los puertorriqueños?</h1>
+                    <a href="como-somos.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>¿Cómo somos los puertorriqueños?</h1>
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="item">
@@ -73,9 +77,11 @@
                     <div class="fill" style="background-image:url('img/ambiente.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>
-                        <i class="fa fa-sun-o fa-spin"></i>
-                        Ambiente</h1>
+                    <a href="ambiente.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1><i class="fa fa-sun-o fa-spin"></i> Ambiente</h1>
+                        </button>
+                    </a>
                 </div>
             </div>
             <div class="item">
@@ -83,7 +89,11 @@
                     <div class="fill" style="background-image:url('img/quienessomos.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>¿Quiénes somos?</h1>
+                    <a href="quienes-somos.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1>¿Quiénes somos?</h1>
+                        </button>
+                    </a>
                 </div>
             </div>   
             <div class="item">
@@ -91,7 +101,11 @@
                     <div class="fill" style="background-image:url('img/promocion.jpg');"></div>
                 </a>
                 <div class="carousel-caption">
-                    <h1>Promoción turística</h1>
+                    <a href="promocion.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1 class="">Promoción Turística</h1>
+                        </button>
+                    </a>
                 </div>
             </div>         
         </div>
