--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -128,7 +128,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra Isla, la que llamamos Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando. ¡Disfruten de la belleza tropical puertorriqueña!</p>
+                    <p>Nuestro deber como puertorriqueños es trabajar arduamente por un mejor progreso para nuestra isla, la que llamamos Puerto Rico. El fin de esta página web es  poder orientar, ayudar e informar al público vigente sobre los diferentes temas informativos que se estarán abarcando. ¡Disfruten de la belleza tropical puertorriqueña!</p>
 
                 </div>
             </div>
