added photos to galeria section and added jquery collagecaption

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Website for puertorrican history">
+    <meta name="description" content="Website for puertorrican history class">
     <meta name="author" content="Bryan1010">
 
     <title>Versatilidad Puertorriqueña</title>
@@ -249,7 +249,7 @@
             </div>
         </footer> -->
 
-    </div>
+<!--    </div>-->
     <!-- /.container -->
 
     <!-- jQuery -->
