added link to galeria section ;)
#YOLO bored

--- a/como-somos.html
+++ b/como-somos.html
@@ -50,13 +50,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
-                    </li>
-                    <li>
                         <a href="ambiente.html">Ambiente</a>
                     </li>
                     <li>
                         <a href="promocion.html">Promoción Turística</a>
+                    </li>
+                    <li>
+                        <a href="galeria.html">Galería</a>
                     </li>
                 </ul>
             </div>
