--- a/galeria.html
+++ b/galeria.html
@@ -42,10 +42,10 @@
         $('.Collage').removeWhitespace().collagePlus(
             {
                 'fadeSpeed'     : 1500,
-                'targetHeight'  : 350,
+                'targetHeight'  : 200,
                 'effect'        : 'effect-2',
                 'direction'     : 'vertical',
-                'allowPartialLastRow':true
+                'allowPartialLastRow':false
             }
         );
     };
@@ -161,6 +161,11 @@
         <div class="Image_Wrapper" data-caption="Capitolio de Puerto Rico">
 			<a>
 				<img src="img/capitolio.jpg">
+			</a>
+		</div>
+        <div class="Image_Wrapper" data-caption="Puerto Rico desde un avión">
+			<a>
+				<img src="img/plane.jpg-large">
 			</a>
 		</div>
                 
