--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
             <li data-target="#myCarousel" data-slide-to="4"></li>
+            <li data-target="#myCarousel" data-slide-to="5"></li>
 
         </ol>
 
@@ -107,7 +108,19 @@
                         </button>
                     </a>
                 </div>
-            </div>         
+            </div> 
+            <div class="item">
+                <a href="galeria.html">
+                    <div class="fill" style="background-image:url('img/galeria.PNG');"></div>
+                </a>
+                <div class="carousel-caption">
+                    <a href="galeria.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1 class="">Galería</h1>
+                        </button>
+                    </a>
+                </div>
+            </div>
         </div>
 
         <!-- Controls -->
