--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -64,6 +64,11 @@
                             <li>
                                 <a href="promocion.html">Promoción Turística</a>
                             </li>
+                            <li>
+                                <a href="galeria.html">Galería</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -115,6 +120,7 @@
                     <p>Se espera que al realizar esta página web se pueda informar y ayudar a cualquier persona que esté interesado en aprender la historia de nuestra bella isla e informarlos de los acontecimientos actuales en los que estamos pasando. Los que entren a la página podrán disfrutar de la versatilidad de lo que es ser puertorriqueño. </p>
                 </div>
             </div>
+        </div>
     </section>
 
 <!-- seccion de Mision -->
@@ -174,7 +180,7 @@
                         </div>
                         <img src="img/Natalia.jpg" class="img-responsive img-fix">
                     </a>
-                </div>                
+                </div>
                 <div class="col-sm-4 col-xs-12 portfolio-item">
                     <a class="portfolio-link">
                         <div class="caption">
