--- a/ambiente.html
+++ b/ambiente.html
@@ -52,7 +52,7 @@
                         <a href="como-somos.html">¿Cómo somos los Puertorriqueños?</a>
                     </li>
                     <li>
-                        <a href="ambiente.html">Ambiente</a>
+                        <a href="galeria.html">Galería</a>
                     </li>
                     <li>
                         <a href="promocion.html">Promoción Turística</a>
