--- a/promocion.html
+++ b/promocion.html
@@ -1,7 +1,6 @@
-<!-- hacer one pager y de promocion turistica y ponerle modales para ensayos, videos y fotos -->
-
 <!DOCTYPE html>
 <html lang="en">
+<!-- hacer one pager y de promocion turistica y ponerle modales para ensayos, videos y fotos -->
 
 <head>
 
@@ -64,8 +63,10 @@
                                 <a href="ambiente.html">Ambiente</a>
                             </li>
                             <li>
-                                <a href="promocion.html">Promoción Turística</a>
+                                <a href="galeria.html">Galería</a>
                             </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -102,18 +103,18 @@
                 </div>
             </div>
         </div>
-    </section> 
+    </section>
 
     <section class="success">
-	    <div class="container">	
-	    	<div class="row">
-				<div class="col-lg-12 col-xs-12 text-center">
-					<h2>Voki</h2>
-					<hr class="star-light">
-				</div>
-	    	</div>
+        <div class="container">
+        	<div class="row">
+                <div class="col-lg-12 col-xs-12 text-center">
+                    <h2>Voki</h2>
+                    <hr class="star-light">
+                </div>
+        	</div>
     	</div>
-		
+        
     </section>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
