Removed fa-sun on ambiente
it looked weird so I took it out

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="carousel-caption">
                     <a href="ambiente.html">
                         <button class="btn btn-primary btn-lg">
-                            <h1><i class="fa fa-sun-o fa-spin"></i> Ambiente</h1>
+                            <h1>Ambiente</h1>
                         </button>
                     </a>
                 </div>
