closed unclosed <li> and <ul>

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 <a href="como-somos.html">
                     <div class="fill" style="background-image:url('img/como-somos.jpg');"></div>
                 </a>
-                <div class="carousel-caption">
+                <div class="carousel-caption col-xs-12">
                     <a href="como-somos.html">
+                        
                         <button class="btn btn-primary btn-lg">
                             <h1>¿Cómo somos los puertorriqueños?</h1>
                         </button>
