--- a/promocion.html
+++ b/promocion.html
@@ -1,5 +1,3 @@
-<!-- hacer one pager y de promocion turistica y ponerle modales para ensayos, videos y fotos -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -66,6 +64,11 @@
                             <li>
                                 <a href="promocion.html">Promoción Turística</a>
                             </li>
+                            <li>
+                                <a href="galeria.html">Galería</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -114,6 +117,17 @@
 	    	</div>
     	</div>
 		
+    </section>
+    
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 text-center">
+                    <h2>Blendspace</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
