--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="como-somos.html">
                     <div class="fill" style="background-image:url('img/como-somos.jpg');"></div>
                 </a>
-                <div class="carousel-caption col-xs-12">
+                <div class="carousel-caption">
                     <a href="como-somos.html">
                         
                         <button class="btn btn-primary btn-lg">
