added noticias section on the homepage

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             <li data-target="#myCarousel" data-slide-to="3"></li>
             <li data-target="#myCarousel" data-slide-to="4"></li>
             <li data-target="#myCarousel" data-slide-to="5"></li>
-
         </ol>
 
         <!-- Wrapper for slides -->
@@ -118,6 +117,18 @@
                     <a href="galeria.html">
                         <button class="btn btn-primary btn-lg">
                             <h1 class="">Galería</h1>
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="item">
+                <a href="noticias.html">
+                    <div class="fill" style="background-image:url('img/noticias.PNG');"></div>
+                </a>
+                <div class="carousel-caption">
+                    <a href="noticias.html">
+                        <button class="btn btn-primary btn-lg">
+                            <h1 class="">Noticias</h1>
                         </button>
                     </a>
                 </div>
