started doing noticias page and changed speed index

--- a/ambiente.html
+++ b/ambiente.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="promocion.html">Promoción Turística</a>
                     </li>
+                    <li>
+                        <a href="Noticias.html">Noticias</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
