--- a/Noticias.html
+++ b/Noticias.html
@@ -66,7 +66,7 @@
                                 <a href="galeria.html">Galería</a>
                             </li>
                             <li>
-                                <a href="Noticias.html">Noticias</a>
+                                <a href="galeria.html">Galería</a>
                             </li>
                             <li>
                                 <a href="promocion.html">Promoción Turística</a>
@@ -86,8 +86,8 @@
             <div class="row">
                 <div class="col-lg-12 col-xs-12">
                     <div class="intro-text">
-                        <span class="name">Cavernas de Camuy</span>
-                        <span class="skills">Promoción Turística</span>
+                        <span class="name">Noticias</span>
+                        <span class="skills">En esta seccion se encontrarán varias noticias con diferentes aspectos.</span>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Opúsculo</h2>
+                    <h2>Económico</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -115,7 +115,7 @@
         <div class="container">
         	<div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Voki</h2>
+                    <h2>Político</h2>
                     <hr class="star-light">
                 </div>
         	</div>
@@ -127,11 +127,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Blendspace</h2>
+                    <h2>Social</h2>
                     <hr class="star-primary">
                 </div>
             </div>
         </div>
+    </section>
+    
+    <section class="success">
+        <div class="container">
+        	<div class="row">
+                <div class="col-lg-12 col-xs-12 text-center">
+                    <h2>Ambiental</h2>
+                    <hr class="star-light">
+                </div>
+        	</div>
+    	</div>
+        
     </section>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
