added noticias to noticias section (politico)

--- a/Noticias.html
+++ b/Noticias.html
@@ -104,8 +104,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-xs-12 col-lg-offset-1 portfolio-item">
-                   <img src="img/brochure-1.png" class="img-responsive">
-                   <img src="img/brochure-2.png" class="img-responsive">
+                    
                 </div>
             </div>
         </div>
@@ -119,6 +118,35 @@
                     <hr class="star-light">
                 </div>
         	</div>
+            <div class="row">
+                <div class="col-lg-10 col-xs-12 col-lg-offset-1 portfolio-item">
+                    <div class="col-lg-4">
+                        <a href="http://www.primerahora.com/noticias/gobierno-politica/nota/lanzancampanaparaqueconductoresnohuyandelosaccidentes-1078526/">
+                            <img  src="http://receph.apextech.netdna-cdn.com/images/tnph3/615/304/1/1/615/304/2015/04/21/jorgehernandez.jpg" class="img-responsive">
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/lajugarretadelosempleos-2037016/">
+                            <img class="img-responsive" src="http://recend.apextech.netdna-cdn.com/images/tn/106/192/2307/3129/473/618/2015/04/21/(end)pd0421wrap.jpg">
+                        </a>
+                    </div>
+                    <div class="col-lg-4">
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/unsistemaquenodamas-2037012/">
+                            <img class="img-responsive" src="http://recend.apextech.netdna-cdn.com/images/tn/2106/1004/5400/5400/473/618/2015/04/21/esp_ciudadanoportada.jpg">
+                        </a>
+                    </div>
+                    <div class="col-lg-offset-2 col-lg-4" style="padding-top: 30px">
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/pordondecomenzaracambiar-2037031/">
+                            <img class="img-responsive" src="http://recend.apextech.netdna-cdn.com/images/tn/169/4/1935/2360/473/618/2015/04/21/fotoorop.jpg">
+                        </a>
+                    </div>
+                    <div class="col-lg-4" style="padding-top: 30px">
+                        <a href="http://www.elnuevodia.com/noticias/politica/nota/elproblemaconeldespidodeempleadospublicos-2037036/">
+                            <img class="img-responsive" src="http://recend.apextech.netdna-cdn.com/images/tn/1128/504/3000/3000/473/618/2015/04/21/corporacionesportada.jpg">
+                        </a>
+                    </div>
+                </div>
+            </div>
     	</div>
         
     </section>
