--- a/Noticias.html
+++ b/Noticias.html
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Económico</h2>
+                    <h2> Aspecto Económico</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -114,7 +114,7 @@
         <div class="container">
         	<div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Político</h2>
+                    <h2>Aspecto Político</h2>
                     <hr class="star-light">
                 </div>
         	</div>
