--- a/Noticias.html
+++ b/Noticias.html
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Social</h2>
+                    <h2>Aspecto Social</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -166,7 +166,7 @@
         <div class="container">
         	<div class="row">
                 <div class="col-lg-12 col-xs-12 text-center">
-                    <h2>Ambiental</h2>
+                    <h2>Aspecto Ambiental</h2>
                     <hr class="star-light">
                 </div>
         	</div>
