--- a/promocion.html
+++ b/promocion.html
@@ -131,6 +131,11 @@
                     <hr class="star-primary">
                 </div>
             </div>
+            <div class="row">
+                <div class="col-offset-xs-2 col-xs-8">
+                    <iframe webkitAllowFullScreen mozallowfullscreen allowFullScreen width="800" height="550" src="https://www.blendspace.com/lessons/vwUVc80dCsqWkQ/cavernas-de-camuy?feature=embed" frameborder="0" ></iframe>
+                </div>
+            </div>
         </div>
     </section>
 
