--- a/quienes-somos.html
+++ b/quienes-somos.html
@@ -114,7 +114,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-xs-12 col-lg-offset-2">
-                    <p>Esta página es producto de un proyecto de la clase de historia de Puerto Rico realizado por alumnos de duodecimo grado de la Escuela Especializada en Ciencias y Matemáticas University Gardens. En esta página se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
+                    <p>Esta página es producto de un proyecto de la clase de historia de Puerto Rico realizado por alumnos de duodécimo grado de la Escuela Especializada en Ciencias y Matemáticas University Gardens. En esta página se busca instruir a nuestros visitantes sobre la historia de nuestra isla, Puerto Rico. El propósito es demostrar la versatilidad puertorriqueña y como con esfuerzo y trabajo hemos podido salir adelante.</p>
 
                 </div>
             </div>
