fixed aspectos to caracter

--- a/Noticias.html
+++ b/Noticias.html
@@ -87,7 +87,7 @@
                 <div class="col-xs-12">
                     <div class="intro-text">
                         <span class="name">Noticias</span>
-                        <span class="skills">En esta seccion se encontrarán varias noticias con diferentes aspectos.</span>
+                        <span class="skills">En esta seccion se encontrarán varias noticias de diferentes carácteres.</span>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2> Aspecto Económico</h2>
+                    <h2>Carácter Económico</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -114,7 +114,7 @@
         <div class="container">
         	<div class="row">
                 <div class="col-sm-12 col-xs-12 text-center">
-                    <h2>Aspecto Político</h2>
+                    <h2>Carácter Político</h2>
                     <hr class="star-light">
                 </div>
         	</div>
@@ -156,7 +156,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Aspecto Social</h2>
+                    <h2>Carácter Social</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -167,7 +167,7 @@
         <div class="container">
         	<div class="row">
                 <div class="col-xs-12 text-center">
-                    <h2>Aspecto Ambiental</h2>
+                    <h2>Carácter Ambiental</h2>
                     <hr class="star-light">
                 </div>
         	</div>
